# RustPrompt

./: Cargo.toml  LICENSE  README.md
docs/: arch.md  plan.md  remove_completion_logic.md  troubleshooting_completion.md
src/: error.rs  main.rs
src/app/: mod.rs  snippet_manager.rs  state.rs
src/command/: definition.rs  executor.rs  mod.rs  parser.rs
src/core/: clipboard.rs  files.rs  files_scanner.rs  ignore_rules.rs  mod.rs  tokenizer.rs  tree.rs  tree_builder.rs  xml.rs
src/repl/: completion.rs  engine.rs  mod.rs  prompt.rs
